<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/tausta"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fadingEdge="vertical"
    android:foregroundGravity="center"
    android:foregroundTintMode="multiply">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="415dp"
        android:layout_height="735dp"
        android:contentDescription="@string/todo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/layout" />

    <View
        android:id="@+id/view2"
        android:layout_width="337dp"
        android:layout_height="165dp"
        android:layout_marginBottom="116dp"
        android:focusableInTouchMode="false"
        android:focusedByDefault="false"
        android:forceHasOverlappingRendering="false"
        android:foreground="@drawable/stopwatchbox"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/view"
        app:layout_constraintStart_toStartOf="@+id/view"
        app:layout_constraintTop_toBottomOf="@+id/view"
        app:layout_constraintVertical_bias="0.454" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sekuntikello"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/view2"
        app:layout_constraintEnd_toEndOf="@+id/view2"
        app:layout_constraintStart_toStartOf="@+id/view2"
        app:layout_constraintTop_toTopOf="@+id/view2"
        app:layout_constraintVertical_bias="0.13" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="189dp"
        android:layout_height="58dp"
        android:layout_marginBottom="2dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/timetemplate"
        android:inputType="time"
        android:textSize="33sp"
        app:layout_constraintBottom_toBottomOf="@+id/view2"
        app:layout_constraintEnd_toEndOf="@+id/textView"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.104" />

    <TextView
        android:id="@+id/textView3_StopWatchLapCount"
        android:layout_width="97dp"
        android:layout_height="28dp"
        android:layout_marginStart="6dp"
        android:text="@string/kierros_2_template"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/editText"
        app:layout_constraintEnd_toStartOf="@+id/editText"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/editText"
        app:layout_constraintTop_toTopOf="@+id/editText"
        app:layout_constraintVertical_bias="0.633" />

    <Button
        android:id="@+id/buttonStopWatchPlay"
        android:layout_width="70dp"
        android:layout_height="55dp"
        android:layout_marginEnd="8dp"
        android:backgroundTint="@color/colorUSSAkeltainen"
        android:foreground="@drawable/playbutton"
        android:foregroundGravity="center"
        app:layout_constraintBottom_toBottomOf="@+id/view2"
        app:layout_constraintEnd_toEndOf="@+id/view2"
        app:layout_constraintHorizontal_bias="0.037"
        app:layout_constraintStart_toStartOf="@+id/view2"
        app:layout_constraintTop_toTopOf="@+id/view2"
        app:layout_constraintVertical_bias="0.954" />

    <Button
        android:id="@+id/buttonStopWatchPause"
        android:layout_width="70dp"
        android:layout_height="55dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:backgroundTint="@color/colorUSSAkeltainen"
        android:foreground="@drawable/pause"
        android:foregroundGravity="center"
        app:layout_constraintBottom_toBottomOf="@+id/view2"
        app:layout_constraintEnd_toEndOf="@+id/view2"
        app:layout_constraintHorizontal_bias="0.33"
        app:layout_constraintStart_toStartOf="@+id/view2"
        app:layout_constraintTop_toTopOf="@+id/view2"
        app:layout_constraintVertical_bias="0.954" />

    <Button
        android:id="@+id/buttonStopWatchLap"
        android:layout_width="70dp"
        android:layout_height="55dp"
        android:layout_marginStart="8dp"
        android:backgroundTint="@color/colorUSSAkeltainen"
        android:foreground="@drawable/undo"
        android:foregroundGravity="center"
        app:layout_constraintBottom_toBottomOf="@+id/view2"
        app:layout_constraintEnd_toEndOf="@+id/view2"
        app:layout_constraintHorizontal_bias="0.633"
        app:layout_constraintStart_toStartOf="@+id/view2"
        app:layout_constraintTop_toTopOf="@+id/view2"
        app:layout_constraintVertical_bias="0.954" />

    <Button
        android:id="@+id/buttonStopWatchZero"
        android:layout_width="70dp"
        android:layout_height="55dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:backgroundTint="@color/colorUSSAkeltainen"
        android:foreground="@android:drawable/btn_dialog"
        android:foregroundGravity="fill_horizontal|center|fill_vertical"
        android:foregroundTint="#000000"
        app:layout_constraintBottom_toBottomOf="@+id/view2"
        app:layout_constraintEnd_toEndOf="@+id/view2"
        app:layout_constraintHorizontal_bias="0.976"
        app:layout_constraintStart_toStartOf="@+id/view2"
        app:layout_constraintTop_toTopOf="@+id/view2"
        app:layout_constraintVertical_bias="0.954" />

    <View
        android:id="@+id/view"
        android:layout_width="339dp"
        android:layout_height="253dp"
        android:layout_marginTop="132dp"
        android:foreground="@drawable/squarebox"
        app:layout_constraintBottom_toBottomOf="@+id/imageView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.472"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/buttonPrevMove"
        android:layout_width="34dp"
        android:layout_height="253dp"
        android:backgroundTint="@color/colorUSSAkeltainen"
        android:foreground="@drawable/previous"
        android:foregroundGravity="center"
        app:layout_constraintBottom_toBottomOf="@+id/view"
        app:layout_constraintEnd_toEndOf="@+id/view"
        app:layout_constraintHorizontal_bias="0.003"
        app:layout_constraintStart_toStartOf="@+id/view"
        app:layout_constraintTop_toTopOf="@+id/view"
        app:layout_constraintVertical_bias="0.574" />

    <Button
        android:id="@+id/buttonNextMove"
        android:layout_width="34dp"
        android:layout_height="253dp"
        android:backgroundTint="@color/colorUSSAkeltainen"
        android:foreground="@drawable/next"
        android:foregroundGravity="center"
        app:layout_constraintBottom_toBottomOf="@+id/view"
        app:layout_constraintEnd_toEndOf="@+id/view"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/view"
        app:layout_constraintTop_toTopOf="@+id/view"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textViewMovementName"
        android:layout_width="142dp"
        android:layout_height="34dp"
        android:text="@string/liike_template"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/view"
        app:layout_constraintEnd_toEndOf="@+id/view"
        app:layout_constraintHorizontal_bias="0.512"
        app:layout_constraintStart_toStartOf="@+id/view"
        app:layout_constraintTop_toTopOf="@+id/view"
        app:layout_constraintVertical_bias="0.036" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="165dp"
        android:layout_height="55dp"
        android:contentDescription="@string/todo"
        app:layout_constraintBottom_toBottomOf="@+id/textView7"
        app:layout_constraintEnd_toEndOf="@+id/textView7"
        app:layout_constraintHorizontal_bias="0.337"
        app:layout_constraintStart_toStartOf="@+id/textView7"
        app:layout_constraintTop_toTopOf="@+id/textView7"
        app:layout_constraintVertical_bias="0.2"
        app:srcCompat="@drawable/myroutinesbox" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="159dp"
        android:layout_height="53dp"
        android:contentDescription="@string/todo"
        app:layout_constraintBottom_toBottomOf="@+id/textView6"
        app:layout_constraintEnd_toEndOf="@+id/textView6"
        app:layout_constraintHorizontal_bias="0.453"
        app:layout_constraintStart_toStartOf="@+id/textView6"
        app:layout_constraintTop_toTopOf="@+id/textView6"
        app:layout_constraintVertical_bias="0.285"
        app:srcCompat="@drawable/myroutinesbox" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="165dp"
        android:layout_height="60dp"
        android:contentDescription="@string/todo"
        app:layout_constraintBottom_toBottomOf="@+id/textViewWeights"
        app:layout_constraintEnd_toEndOf="@+id/textViewWeights"
        app:layout_constraintHorizontal_bias="0.456"
        app:layout_constraintStart_toStartOf="@+id/textViewWeights"
        app:layout_constraintTop_toTopOf="@+id/textViewWeights"
        app:layout_constraintVertical_bias="0.371"
        app:srcCompat="@drawable/myroutinesbox" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="95dp"
        android:layout_height="32dp"
        android:text="@string/sarjat_4_temmplate"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/view"
        app:layout_constraintEnd_toEndOf="@+id/view"
        app:layout_constraintHorizontal_bias="0.483"
        app:layout_constraintStart_toStartOf="@+id/view"
        app:layout_constraintTop_toTopOf="@+id/view"
        app:layout_constraintVertical_bias="0.755" />

    <TextView
        android:id="@+id/textViewWeights"
        android:layout_width="119dp"
        android:layout_height="25dp"
        android:text="@string/painot_903kg_template"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/view"
        app:layout_constraintEnd_toEndOf="@+id/view"
        app:layout_constraintStart_toStartOf="@+id/view"
        app:layout_constraintTop_toTopOf="@+id/view"
        app:layout_constraintVertical_bias="0.286" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="79dp"
        android:layout_height="25dp"
        android:text="@string/toistot_9_template"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/view"
        app:layout_constraintEnd_toEndOf="@+id/view"
        app:layout_constraintHorizontal_bias="0.453"
        app:layout_constraintStart_toStartOf="@+id/view"
        app:layout_constraintTop_toTopOf="@+id/view"
        app:layout_constraintVertical_bias="0.491" />

</androidx.constraintlayout.widget.ConstraintLayout>